fixing home page image alignment

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -87,6 +87,8 @@ form {
 }
 
 .bike {
+  position: absolute;
+  left: 0;
   width: 100%;
   height: 100%;
 }
